# GNNTurb

./: Dockerfile  README.md
GNNTurb/: CMakeLists.txt  GNNTurb.C  GNNTurb.H  UFlucDelta.C  compile.sh  makeTurbulenceModel.C  uDelta.C
GNNTurb/LESDirectTauij/: LESDirectTauij.C  LESDirectTauij.H
GNNTurb/geometry/: cell_face_graph.H  utils.H
example/0/: expDWallDelta
example/constant/: turbulenceProperties
example/system/: controlDict
